--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ author: yohom <382146139@qq.com>
 homepage: https://github.com/fluttify-project/amap_map_fluttify
 
 environment:
-  sdk: ">=2.2.1 <3.0.0"
+  sdk: ">=2.2.1-dev.2.1 <3.0.0"
 
 dependencies:
   flutter:
